# OpenglPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Modules/ImGUI/: ImguiModule.cpp  ImguiModule.h
Modules/Transform/: Transform.cpp  Transform.h
Renderer/: Camera.cpp  Camera.h  GLRenderer.cpp  GLRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
